[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["KonstantinSh <Kverde@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^1.7.0"
python-frontmatter = "^1.0.0"
"ruamel.yaml" = "^0.17.21"
bibtexparser = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
